@@ -1,8 +1,57 @@
 'use strict'
 
+const URL = require('url').URL
+
 var shimmer = require('../shimmer')
 var { getDBDestination } = require('../context')
 const { setElasticsearchDbContext } = require('../elasticsearch-shared')
+
+const startsWithProtocolRE = /^([a-z]+:)?\/\//i
+const DEFAULT_PORT = 9200
+const DEFAULT_PORT_FROM_PROTO = {
+  'http:': 80,
+  'https:': 443
+}
+
+// This is an imperfect equivalent of the handling in the `Transport`
+// constructor and internal `Host` parsing function in the ES client.
+function getHostAndPortFromTransportConfig (config) {
+  const transportHosts = config ? config.host || config.hosts : null
+  if (!transportHosts) {
+    return null
+  }
+
+  let firstTransportHost = Array.isArray(transportHosts)
+    ? transportHosts[0] : transportHosts
+  if (!firstTransportHost) {
+    return null
+  }
+
+  if (typeof firstTransportHost === 'string') {
+    // "example.com:42" or "someprotocol://example.com:42" or
+    // "someprotocol://example.com".
+    if (!startsWithProtocolRE.test(firstTransportHost)) {
+      firstTransportHost = 'http://' + firstTransportHost
+    }
+    let u
+    try {
+      u = new URL(firstTransportHost)
+    } catch (_err) {
+      return null
+    }
+    if (!u.port) {
+      u.port = DEFAULT_PORT_FROM_PROTO[u.protocol]
+    }
+    return [u.hostname, u.port]
+  } else if (typeof firstTransportHost === 'object') {
+    return [
+      firstTransportHost.hostname || firstTransportHost.host,
+      firstTransportHost.port || DEFAULT_PORT
+    ]
+  }
+
+  return null
+}
 
 module.exports = function (elasticsearch, agent, { enabled }) {
   if (!enabled) return elasticsearch
@@ -28,10 +77,11 @@ module.exports = function (elasticsearch, agent, { enabled }) {
           params && params.body)
 
         // Get the remote host information from elasticsearch Transport options.
-        const transportConfig = this._config
         let host, port
-        if (typeof transportConfig === 'object' && transportConfig.host) {
-          [host, port] = transportConfig.host.split(':')
+        const hostAndPort = getHostAndPortFromTransportConfig(this._config)
+        if (hostAndPort) {
+          host = hostAndPort[0]
+          port = hostAndPort[1]
         }
         span.setDestinationContext(getDBDestination(span, host, port))
 
