@@ -44,6 +44,10 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fix a crash in instrumentation of the old Elasticsearch client
+  (`elasticsearch`) for some rarer cases of client options -- for example
+  passing multiple hosts. ({pull}2312[#2312])
+
 * Ensure the internal HTTP(S) client requests made by the APM agent to APM
   server are not themselves traced. ({issues}1168[#1168], {issues}1136[#1136])
 
@@ -90,7 +94,7 @@ Notes:
 
 * Add instrumentation of the AWS SNS publish method when using the
   https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`). ({pull}2157[#2157])
-  
+
 [float]
 ===== Bug fixes
 
